objects/Actor__c.object
<CustomObject>
    <fields>
        <fullName>Abstract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abstract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actor__c</fullName>
        <label>Actor</label>
        <length>90</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Kind_Of_Actor__c</fullName>
        <formula>Is_Kind_Of_Ref__r.Actor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Kind Of Actor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Kind_Of_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the actor type that generalizes this actor type.</description>
        <label>Is Kind Of Ref</label>
        <referenceTo>Actor__c</referenceTo>
        <relationshipLabel>Subtype Actors</relationshipLabel>
        <relationshipName>Subtype_Actors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Actor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Actor</label>
        <referenceTo>Actor__c</referenceTo>
        <relationshipLabel>Derived Actors</relationshipLabel>
        <relationshipName>Derived_Actors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Actors</relationshipLabel>
        <relationshipName>Actors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Actor</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Actor Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>